--- a/sliderPro.html
+++ b/sliderPro.html
@@ -1,4 +1,4 @@
-k href="sliderPro.css" rel="stylesheet">
+<link href="sliderPro.css" rel="stylesheet">
 <script src="https://www.solodev.com/assets/slider-pro/jquery.sliderPro.min.js"></script>
 <script src="https://www.solodev.com/assets/slider-pro/sliderPro.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
